--- a/pages/zorra.css
+++ b/pages/zorra.css
@@ -1,7 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -388,4 +385,9 @@ table {
     position:absolute;
     left:50px;
     top:750px;
+}
+.mascotitas{
+    position: absolute;
+    display: grid;
+    right: 2%;
 }
